# OCLlamaServer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test-publish.yml
src/OCLlamaServer/: LICENSE.txt  __init__.py  _parsing.py  _sse.py  async_client.py  client.py  exceptions.py  local_server.py  types.py
tests/: test_client.py  test_local_server.py  test_package_metadata.py
