[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oc-llama-server"
version = "1.0.0"
description = "Complete Python client library for local llama.cpp HTTP server API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "llama-cpp-cuda-binaries",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
    "mypy>=1.5",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/OCLlamaServer"]
include = ["src/OCLlamaServer/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
